--- a/blockchain101/governance/tutorial_hardhat/package.json
+++ b/blockchain101/governance/tutorial_hardhat/package.json
@@ -5,11 +5,11 @@
     "ethereum-waffle": "^4.0.9",
     "hardhat": "^2.12.4",
     "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.2",
-    "sol2uml": "^2.4.2"
+    "sol2uml": "^2.4.2",
+    "solidity-coverage": "^0.8.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.1",
+    "@openzeppelin/contracts": "^4.9.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2"
